--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
-  "name": "take220-react",
+  "name": "test",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "history": "^4.7.2",
+    "autoprefixer": "^8.6.2",
+    "chokidar-cli": "^1.2.0",
+    "node-sass": "^4.9.0",
+    "npm-run-all": "^4.1.3",
+    "postcss-cli": "^5.0.0",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
-    "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4"
   },
